2005-11-25  Sven Panne  <sven.panne@aedion.de>

	* admin/alut.vcproj: Use "Multi-threaded DLL (/MD)" and "Multi-threaded
	Debug DLL (/MDd)" as the runtime library, bringing down the size of
	alut.dll to something sensible.

	* examples/playfile.c, test_suite/test_fileloader.c,
	test_suite/test_memoryloader.c, test_suite/test_retrostuff.c: Changed
	literal ALfloat constants from 0.1 to 0.1f, silencing Visual C.

	* configure.ac: Tell the system headers that we might use POSIX/XPG
	entitites like struct timespec or random(), which are not in the ANSI
	standard. Do not define any user variables like CFLAGS. Split the old
	configure flag --enable-warnings into a pair --enable-warnings and
	--enable-werror. Use a (modified) macro from the autoconf archive to
	detect strict warning flags.

	* admin/m4/alut_check_cflags_wall.m4: Added. It is a modified version of
	ax_cflags_warn_all_ansi.m4 from the autoconf archive, updated to conform
	to more recent autoconf standards.

2005-11-21  Sven Panne  <sven.panne@aedion.de>

	* configure.ac: Removed --enable-debug option, it was unused.

2005-11-19  Sven Panne  <sven.panne@aedion.de>

	* doc/alut.html: Added a remark about LD_PRELOAD to use old
	binaries with the new ALUT.

2005-11-17  Sven Panne  <sven.panne@aedion.de>

	* src/alutInit.c: Fixed alutInitWithoutContext initialisation
	state check.

2005-10-29  Sven Panne  <sven.panne@aedion.de>

	* examples/hello_world.c, examples/playfile.c ,include/AL/alut.h,
	src/alutUtil.c, test_suite/test_fileloader.c,
	test_suite/test_memoryloader.c, test_suite/test_retrostuff.c,
	test_suite/test_waveforms.c: Synched implementation with latest spec
	changes.

	* doc/alut.html: As discussed on the mailing list, sleeping is now done
	via an ALfloat. This is more consinstent with physical reality and
	alutCreateBufferWaveform. Note that alutSleep can actually fail now,
	something which the former alutMicroSleep never did.

	* src/alutLoader.c: Re-indented.
